--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,6 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: isceo_production
+  username: isceo
+  password: <%= ENV['ISCEO_DATABASE_PASSWORD'] %>
